2010-07-29  Robert Millan  <rmh@gnu.org>

	* util/grub-probe.c (PRINT_FS_LABEL): New enum value.
	(probe): Handle `PRINT_FS_LABEL'.
	(main): Handle `-t fs_label'.

2010-07-29  Robert Millan  <rmh@gnu.org>

	* configure.ac: Remove grub-mkisofs checks.

2010-07-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/grub-install.in: Don't use empty grub_device.
	Reported by: Lennart Sorensen.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/00_header.in: Remove compatibility with terminal.mod
	prior to terminal_input/terminal_output separation. It's been over 1.5
	years and those versions weren't widely deployed.

2010-07-22  Colin Watson  <cjwatson@ubuntu.com>

	* disk/raid.c (insert_array): Don't count named arrays when looking
	for unused array numbers.
	Reported and tested by: Michael Guntsche.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	* bus/usb/emu/usb.c (grub_usb_poll_devices): Add a dummy
	implementation of this so that grub-emu links again, with a note
	that this should support hotplugging in the future.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	* kern/emu/getroot.c (grub_util_get_grub_dev): Use xasprintf.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	* disk/loopback.c (grub_cmd_loopback): Don't leak a grub_file_t
	handle on failure.
	(grub_loopback_close): Remove empty function.
	(grub_loopback_dev): Remove close method.

2010-07-20  Colin Watson  <cjwatson@ubuntu.com>

	Disable EFI cursor when the EFI console becomes inactive.

	* term/efi/console.c (grub_efi_console_init): New function.
	(grub_efi_console_fini): New function.
	(grub_console_term_output): Register init and fini methods.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/util/grub-shell-tester.in: Remove bashism and declare as
	sh script.

2010-07-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* disk/loopback.c (grub_loopback): Replace filename with file.
	(delete_loopback): Handle new semantics.
	(grub_cmd_loopback): Likewise.